--- a/langswitch.html
+++ b/langswitch.html
@@ -363,6 +363,15 @@
       display: block;
       z-index: 1;
     }
+    .footer-font{
+      font-family: 'League Spartan';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 2px;
+      color: #424242;
+      font-family: League-Spartan-Regular;
+    }
   </style>
 </head>
 <body>
@@ -1057,8 +1066,89 @@
     </div>
   </div>
   </div>
+  <!--Sponsors-->
   <div class="container-fluid" style ="padding:0px;position:relative;overflow-x: visible;z-index:-1" id="bg7">
     <img src="tile6.png" alt="Avatar Logo" style="min-width:100%;">
+  </div>
+  <div id="about" class="container-fluid" style="width:100%;top:6600px;position:absolute;">
+    <h1 id="heading-font" lang="en">Sponsors</h1>
+    <h1 id="heading-font" lang="id">Sponsors</h1>
+  </div>
+
+  <!--Footer-->
+  <div id="footer" class="container-fluid" style="height:80px;width:100%;top:7480px;position:absolute;background: rgba(255, 255, 255, 0.5);">
+    <div class="row footer-font" style="height:100%;width:100%;">
+      <div class="col-sm-5" style="margin-top:2.5%">
+        <p style="padding-left:5%">© 2023. Garuda Hacks. All rights reserved.</p>
+      </div>
+      <div class="col-sm-6" style="margin-top:0.5%">
+        <div class="row" style=" padding-right:20px;margin-top:2.5%;">
+          <div class="container-fluid col-sm-3">
+            <div class="row" style="text-align:left;height:100%;">
+              <div class="container-fluid col-sm-3" style="position:relative;margin-right:auto;margin-left:auto;">
+                <img src="footeremail.svg" style="width:80%;display:block;position:relative;margin-left:40%">
+              </div>
+              <div class="container-fluid col-sm-9">
+                <div class="row"> 
+                  <p style="font-weight: 700;">EMAIL</p>
+                </div>
+                <div class="row">
+                  <p style="font-weight:100">team@garudahacks.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid col-sm-3">
+            <div class="row" style="text-align:left;height:100%;margin-left:10%">
+              <div class="container-fluid col-sm-3" style="position:relative;margin-right:auto;margin-left:auto;">
+                <img src="ig2.svg" style="width:100%;display:block;position:relative;margin-left:40%;">
+              </div>
+              <div class="container-fluid col-sm-9">
+                <div class="row">
+                  <p style="font-weight: 700;">INSTAGRAM</p>
+                </div>
+                <div class="row">
+                  <p style="font-weight:100" >@garudahacks</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid col-sm-3">
+            <div class="row" style="text-align:left;height:100%;margin-left:5%">
+              <div class="container-fluid col-sm-3" style="position:relative;margin-right:auto;margin-left:auto;">
+                <img src="linkedin.svg" style="width:80%;display:block;position:relative;margin-left:40%;">
+              </div>
+              <div class="container-fluid col-sm-9">
+                <div class="row">
+                  <p style="font-weight: 700;">LINKEDIN</p>
+                </div>
+                <div class="row">
+                  <p style="font-weight:100">Garuda Hacks</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid col-sm-3">
+            <div class="row" style="text-align:center;height:100%;">
+              <div class="container-fluid col-sm-3" style="position:relative;margin-right:auto;margin-left:auto;">
+                <img src="wa.svg" style="width:80%;display:block;position:relative;margin-left:160%;">
+              </div>
+              <div class="container-fluid col-sm-9">
+                <div class="row">
+                  <p style="font-weight:700">WHATSAPP</p>
+                </div>
+                <div class="row">
+                  <p style="font-weight:100" >123 456 789</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid col-sm-1">
+
+      </div>
+    </div>
   </div>
 </body>
 </html>
