--- a/langswitch.html
+++ b/langswitch.html
@@ -434,17 +434,17 @@
       <div class="row" style="width:50%;height:100%">
         <div class="container-fluid col-sm-5 red-button" style="display:flex;align-items:center;height:60px;width:36%;margin-left:1%">
           <a href="https://airtable.com/shrrNZAo4mECqKid0" target="_blank">
-            <button type="button" class="btn project-info-text" style="color:white" lang="en">
+            <button type="button" class="btn project-info-text" style="color:white;font-size:15px;padding-right:0" lang="en">
               <img src="puzzle.svg" style="margin-right:6px;">
-              Register to Hackathon
+              Register to Hackathon/Speaker Series
             </button>
           </a>
         </div>
         <div class="container-fluid col-sm-5 red-button" style="display:flex;align-items:center;height:60px;width:40%;margin-left:1%">
-          <a href="https://airtable.com/shrrNZAo4mECqKid0" target="_blank">
+          <a href="https://docs.google.com/forms/d/1m3YfgStI8vqyTBPWVikPzRCzYv3rrctul0sPKtS-vbQ/edit?ts=647c39d2 " target="_blank">
             <button type="button" class="btn project-info-text" style="color:white" lang="en">
               <img src="lightbulb.svg" style="margin-right:6px;">
-              Register to Speaker Series
+              Register as a Waitlist
             </button>
           </a>
         </div>
@@ -1076,7 +1076,7 @@
   </div>
 
   <!--Footer-->
-  <div id="footer" class="container-fluid" style="height:80px;width:100%;top:7480px;position:absolute;background: rgba(255, 255, 255, 0.5);">
+  <div id="footer" class="container-fluid" style="height:80px;width:100%;position:absolute;background: rgba(255, 255, 255, 0.5)">
     <div class="row footer-font" style="height:100%;width:100%;">
       <div class="col-sm-5" style="margin-top:2.5%">
         <p style="padding-left:5%">© 2023. Garuda Hacks. All rights reserved.</p>
